<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/logout"/>
    
    <item
        android:id="@+id/screenShot"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/screen_shot"/>
    
    <item
        android:id="@+id/userProfile"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/user_profile"/>
    
</menu>

